proptest-derive2/tests/compile-fail/E0004-void-enum.rs
#![feature(never_type)]

#[macro_use]
extern crate proptest_derive;

#[derive(Debug, Arbitrary)] //~ ERROR: [proptest_derive, E0004]
enum Void {}

#[derive(Debug, Arbitrary)] //~ ERROR: [proptest_derive, E0004]
enum FooBar {}
